<resources>
    <string name="app_name">영식이형</string>
    <string name="title_activity_examplegame1">다같이 놀자</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">다음</string>
    <string name="previous">이전</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="text_st_languagetitle">언어</string>

    <string name="_5">5문제</string>
    <string name="_10">10문제</string>
    <string name="_20">15문제</string>
    <string name="text_st_title">"     게임 설정"</string>
    <string name="switchfordark">다크모드</string>
    <string name="confirm">확인</string>
    <string name="cancel">취소</string>
    <string name="text_SS_TeamSelectTopBar">"    점수 설정"</string>
    <string name="test_SS_TeamSelectText2">수정할 팀</string>
    <string name="text_SS_BonusText">점수 지정</string>
    <string name="tB_teamBoard_Topbar_Text">팀 점수 현황</string>
    <string name="tS_TeamShow_Text">팀 배정표</string>
    <string name="game_help_video">게임 설명 영상</string>
    <string name="game1_title">랜덤게임</string>
    <string name="game2_title">4글자 게임</string>
    <string name="game3_title">인물 퀴즈</string>
    <string name="game4_title">노래 맞추기</string>
    <string name="game2_description">4글자 중 두 글자가 제시되면 \\n 나머지 두 글자를 제한시간 내에 말해보자!</string>
    <string name="game1_description">무작위로 게임을 선택합니다.</string>
    <string name="game3_description">제한시간 내에 사진 내 인물을 맞춰보자!</string>
    <string name="game4_description">노래가 재생되면 그에 맞는 제목을 말해보자!</string>
    <string name="game5_description">(온라인 게임) 오전 10시에 맞춰 누구보다 빠르게 신청버튼을 누르자!</string>
    <string name="game5_title">티켓팅 게임</string>
    <string name="game6_title">윷놀이 팀전</string>
    <string name="game6_description">다같이 함께하는 파티 윷놀이!</string>
    <string name="korean">한국어</string>
    <string name="english">English</string>
    <string name="japanese">日本語</string>
    <string name="GS_showtoptip">진행할 게임의 종목을 선택하세요.</string>
    <string name="GS_selectgameview">" 게임 선택"</string>
    <string name="text_TeamCreate_Title2">메뉴</string>
    <string name="quit">" 나가기"</string>
    <string name="save">저장</string>
    <string name="clear">초기화</string>
    <string name="text_TeamCreate_Title">팀 생성하기</string>
    <string name="teamCreate_helptext">좌측에서 수정할 팀을 선택해 주세요.</string>
    <string name="tC_team1_text">1번 팀</string>
    <string name="tC_team2_text">2번 팀</string>
    <string name="tC_team3_text">3번 팀</string>
    <string name="tC_team4_text">4번 팀</string>
    <string name="editTextTeamname">여기에 팀 이름 입력(한글 6자 이하)</string>
    <string name="editTextTeamNameInfo">팀명 :</string>
    <string name="teamCreate_member_helphint">여기에 팀 멤버를 입력하세요</string>
    <string name="teamloadsuccessful">팀 불러오기 성공</string>
    <string name="addteammemberhint">여기에 팀 멤버를 추가해 주세요</string>
    <string name="teamsavecompleted">팀 저장 완료</string>
    <string name="teamupdatesuccess">팀 수정 완료</string>
    <string name="DBinitiatesuccess">DB 초기화 완료</string>
    <string name="text_BM_TeamSelectTopBar">"     보너스 추가"</string>
    <string name="text_BM_TeamSelectText2">보너스를 줄 팀은?</string>
    <string name="restext_BM_SelectTeam">팀을 선택해 주세요.</string>
    <string name="text_BM_BonusText">추가할 보너스는?</string>
    <string name="textapptitle">따로 놀지 말고 같이 놀자!</string>
    <string name="main_MenuGrid_CategoryText_Game">메인 화면</string>
    <string name="main_MenuGrid_CategoryText_Team">팀 생성과 관리</string>
    <string name="btn_RankCheck">현재 순위</string>
    <string name="btn_TeamCreate">팀 만들기</string>
    <string name="btn_TeamCheck">팀 배정표</string>
    <string name="btn_GameSelect">게임 시작</string>
    <string name="btn_Rullet">벌칙 룰렛</string>
    <string name="btn_BonusMenu">보너스 추가</string>
    <string name="btn_ScoresetMenu">점수 설정</string>
    <string name="btn_Settings">설정</string>
    <string name="whatwillbenextgame">다음 게임은? ㄷㄱㄷㄱ</string>
    <string name="current1st">현재 1등</string>
    <string name="scoreformat">점</string>
    <string name="goBack">뒤로</string>
    <string name="Start">"시작 "</string>
    <string name="goBackText">　뒤로가기</string>
    <string name="StartText">시작하기　</string>
    <string name="pleasecreateteammember">주의 : 팀 멤버를 생성해주세요.</string>
    <string name="pleasecreateteam">먼저 팀을 생성해 주세요.</string>
    <string name="setscorecompleted">점수 지정 완료</string>
    <string name="pleaseenterscore">지정할 점수를 입력하세요.</string>
    <string name="rankformat">"등 "</string>
    <string name="gameovertext">게임 종료!</string>
    <string name="serveropensat10pm">10시 정각에 서버가 열립니다.</string>
    <string name="submitsuccess">신청 성공!</string>
    <string name="mainmenutext">메인메뉴</string>
    <string name="participantstext">참가자</string>
    <string name="customer_description2">티켓팅에 참여합니다.</string>
    <string name="presenter_description2">티켓팅 서버를 엽니다.</string>
    <string name="presenter_description">방장</string>
    <string name="presenter_adminres">등수 확인</string>
    <string name="presenter_viewres">결과보기</string>
    <string name="switchsibo">배경음</string>
    <string name="btn_svforsugang">신청</string>
    <string name="cautionwindow">"   안내"</string>
    <string name="cautionwindow_duplicate">이미 신청하였습니다.</string>
    <string name="game004_title2">문제의 개수를 고르세요.</string>
    <string name="game006_title">"     인물퀴즈"</string>
    <string name="maxrankview">표시할 최대 등수</string>
    <string name="passbtn">패스</string>
    <string name="gameshutdown">게임종료</string>
    <string name="checkscore1">점수확인</string>
    <string name="checkwordlist1">단어 확인</string>
    <string name="whatisthissongname">이 노래의 제목은?</string>
    <string name="addentity4word">문제 추가</string>
    <string name="picpic_ifanswercorrect">팀 정답! 3초후에 다음 문제가 나옵니다.</string>
    <string name="picpic_ifpass">패스 ! 다음 문제가 3초후에 나옵니다.</string>
    <string name="common1st">[공동 1등]</string>
    <string name="penaltyrullettitle">벌칙 룰렛</string>
    <string name="penaltylistwho2">꼴찌 팀의 벌칙은?</string>
    <string name="rullet_description">단체 벌칙</string>
    <string name="rullet_description2">벌칙 중 하나를 랜덤으로 고릅니다.</string>
    <string name="penalty_description2">팀 중에 1명만 벌칙을 받습니다.</string>
    <string name="penalty_description">개인 벌칙</string>
    <string name="penalty_start">나만 아니면 돼!</string>
    <string name="maxrankview2">벌칙 대상 팀</string>
    <string name="atariman">당첨자 :</string>
    <string name="checkwordlist">단어 확인</string>


</resources>