<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="200dp"
    android:layout_height="300dp"
    android:layout_gravity="center_horizontal|center_vertical"
    android:theme="@android:style/Theme.DeviceDefault.Light.Dialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="16dp">

        <android.widget.Button
            android:id="@+id/button5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/_5"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"/>



        <android.widget.Button
            android:id="@+id/button10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/_10"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"/>



        <android.widget.Button
            android:id="@+id/button20"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:text="@string/_20"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:layout_marginBottom="15dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>