<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".game005">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/sugang_ConstLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#323232"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/TopBar005"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#292929"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:fontFamily="@font/nexonfootballgothic_b"
                android:gravity="center"
                android:text="@string/game5_title"
                android:textColor="@color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="250dp"
            android:background="#7C4DFF"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/UnderBar005"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/TopBar005">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/customer_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/entitybackgroundgame"
                android:visibility="gone"
                tools:visibility="gone">

                <Button
                    android:id="@+id/btn_sv"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/nexonfootballgothic_b"
                    android:text="@string/btn_svforsugang"
                    android:textSize="24sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <EditText
                    android:id="@+id/edit_Nickname"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="닉네임 입력"
                    android:inputType="textPersonName"
                    android:text=""
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="gone" />

                <LinearLayout
                    android:id="@+id/cautionMenu_Layout"
                    android:layout_width="394dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/bgoutlinecorner"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible">

                    <TextView
                        android:id="@+id/text_pp_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:background="#7C4DFF"
                        android:fontFamily="@font/nexonfootballgothic_b"
                        android:gravity="start"
                        android:text="@string/cautionwindow"
                        android:textColor="#ffffff"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="10dp"
                        android:background="@drawable/entitybackground"
                        android:gravity="center"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/text_pp_languagetitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10dp"
                            android:layout_marginTop="2dp"
                            android:layout_marginRight="10dp"
                            android:fontFamily="@font/nexonfootballgothic_b"
                            android:text="@string/cautionwindow_duplicate"
                            android:textColor="#000000"
                            android:textSize="20sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="10dp"
                        android:gravity="center"

                        android:orientation="horizontal">

                        <Button
                            android:id="@+id/btn_pp_Confirm"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:fontFamily="@font/nexonfootballgothic_b"
                            android:text="@string/confirm"
                            android:textSize="18sp" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/presenter_menu"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/entitybackgroundgame"
                android:visibility="gone"
                tools:visibility="visible">

                <LinearLayout
                    android:id="@+id/maxrankviewlayout"
                    android:layout_width="120dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:orientation="vertical"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/maxrankview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:fontFamily="@font/nexonfootballgothic_b"
                        android:text="@string/maxrankview"
                        android:textSize="16sp" />

                    <Spinner
                        android:id="@+id/memspinner"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <Switch
                    android:id="@+id/switchsibo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:fontFamily="@font/nexonfootballgothic_b"
                    android:text="@string/switchsibo"
                    android:textColor="#666666"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Chronometer
                    android:id="@+id/chronometer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:fontFamily="@font/nexonfootballgothic_b"
                    android:textSize="84sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/presenter_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/nexonfootballgothic_b"
                    android:text="@string/clear"
                    android:textSize="24sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/presenter_start" />

                <Button
                    android:id="@+id/presenter_viewres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/nexonfootballgothic_b"
                    android:text="@string/presenter_viewres"
                    android:textSize="24sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    tools:visibility="gone" />

                <Button
                    android:id="@+id/presenter_start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:fontFamily="@font/nexonfootballgothic_b"
                    android:text="@string/Start"
                    android:textSize="24sp"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/presenter_adminres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/nexonfootballgothic_b"
                    android:text="@string/presenter_adminres"
                    android:textSize="24sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:visibility="visible" />

                <TextView
                    android:id="@+id/presenter_customerres"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="@font/nexonfootballgothic_b"
                    android:text=""
                    android:textSize="28sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/presenter_adminres"
                    tools:visibility="gone" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/presenter_select"
                android:layout_width="50dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/entitybackgroundgame"
                android:visibility="gone"
                tools:visibility="gone">

                <TextView
                    android:id="@+id/presenter_description"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/footballgothic"
                    android:text="@string/presenter_description"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="10dp" />

                <TextView
                    android:id="@+id/presenter_description2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/footballgothic"
                    android:text="@string/presenter_description2"
                    android:textAlignment="center"
                    android:textColor="#888888"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:layout_editor_absoluteX="10dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/customer_select"
                android:layout_width="20dp"
                android:layout_height="200dp"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:background="@drawable/entitybackgroundgame"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/customer_description2"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/footballgothic"
                    android:text="@string/customer_description2"
                    android:textAlignment="center"
                    android:textColor="#888888"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    tools:layout_editor_absoluteX="10dp" />

                <TextView
                    android:id="@+id/customer_description"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:fontFamily="@font/footballgothic"
                    android:text="@string/participantstext"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="28sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="10dp" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/UnderBar005"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#292929"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/backmenumenugo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nexonfootballgothic_b"
                android:gravity="center"
                android:text="@string/mainmenutext"
                android:textColor="@color/white"
                android:layout_marginStart="5dp"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/btn_55_backToMenu_ran"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btn_55_backToMenu_ran"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/teal_200"
                android:fontFamily="@font/nexonfootballgothic_b"
                android:text="@string/goBack"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>